<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">

        <Button
            android:id="@+id/checkInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/checkInBtn" />

        <Button
            android:id="@+id/empListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/empList" />

        <Button
            android:id="@+id/scheduleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/scheduleBtn" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/exitBtn" />
    </LinearLayout>
</FrameLayout>